syntax = "proto3";

import "Proto_Common.proto";
package YouYou.Proto;

//玩家向服务器发送点击移动消息
message C2GS_ClickMove
{
	Vector3 TargetPos = 1;//目标点
}
